[tool.poetry]
name = "async-python-sprint-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"
loguru = "^0.6.0"
aioconsole = "^0.5.1"
aiohttp = "^3.8.3"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
